<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RoadPilot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="food">Food</string>
    <string name="jobs">Jobs</string>
    <string name="news">News</string>
    <string name="need_help">Search</string>
    <string name="todo">TODO</string>
    <string name="language_terms_amp_conditions"><![CDATA[Language,Terms & Conditions....]]></string>
    <string name="settings">Settings</string>
    <string name="invite_your_friends_and_have_fun">Invite your friends and have fun!</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="find_dhaba_and_job_owners">Find Dhaba and Job Owners ......</string>
    <string name="my_preferences">My Account</string>
    <string name="tirupati_andra_pradesh_india">Tirupati, Andra Pradesh, India</string>
    <string name="lokesh">Lokesh</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="instagram">Instagram</string>
    <string name="notifications">Notifications</string>
    <string name="get_notified_every_time_you_receive_a_message_when_someone_reacts_to_your_profile_you_can_also_get_a_daily_recap_of_your_popularity_on_thriving_so_you_never_miss_a_thing">Get notified every time you receive a message, when someone reacts to your profile. you can also get a daily recap of your popularity on RoadPilot so you never miss a thing…</string>
    <string name="connect_accounts">Connect Accounts</string>
    <string name="legal">Legal</string>
    <string name="terms_and_conditions_of_use">Terms and Conditions of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">FeedBack</string>
    <string name="logout">LogOut</string>
    <string name="roadpilot_v01_0_0">RoadPilot v01.0.0</string>
    <string name="delete_account">Delete Account</string>
    <string name="applied_for">Applied For</string>
    <string name="membership_data">Membership Data</string>
    <string name="update_membership">Current MemberShip</string>
    <string name="powered_by">Powered by</string>
    <string name="buddies">Buddies®</string>
    <string name="membership_plan_others">Membership Plan, others.......</string>
    <string name="insurance">Insurance</string>
    <string name="we_provide_the_insurance_in_case_of_any_trouble_for_both_vehicle_and_life">We provide the Insurance In case of any Trouble for vehicle</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="truck">ट्रक  </string>
    <string name="owner">मालिक, </string>
    <string name="driver">चालक </string>
    <string name="ka_atutt_sathi">का अटूट साथी</string>
    <string name="i_am_a">I am a</string>
    <string name="mechanic">Mechanic</string>
    <string name="dhaba">Dhaba</string>
    <string name="thank_you_choosing_the_roadpilot_n_please_select_the_role_and_continue_the_process">Thank you choosing the RoadPilot \n Please Select the Role and continue the process</string>
    <string name="owners_registration">Owners Registration</string>
    <string name="name">Name</string>
    <string name="let_s_get_some_personal_info">Let\'s get some Personal Info</string>
    <string name="company_name">Company</string>
    <string name="individual_name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_id">Email Id</string>
    <string name="address">Address</string>
    <string name="let_s_get_some_proofs">Let\'s get some Proofs</string>
    <string name="aadhar_proof">Aadhar Proof</string>
    <string name="front_side">Front side</string>
    <string name="back_side">Back Side</string>
    <string name="pan_proof">PAN Proof</string>
    <string name="submit">Submit</string>
    <string name="already_have_account">Already Have account?</string>
    <string name="singin">SignIn Here…</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="driving_license">Driving License</string>
    <string name="dhaba_registration">Dhaba Registration</string>
    <string name="dhaba_image">Dhaba Image</string>
    <string name="owner_image">Owner Image</string>
    <string name="owner_name">Name</string>
    <string name="dhaba_name">Dhaba Name</string>
    <string name="let_s_know_about_dhaba">Let\'s Know about Dhaba</string>
    <string name="highway">HighWay</string>
    <string name="facilities">Facilities</string>
    <string name="parking">Parking</string>
    <string name="bath_area">Bath area</string>
    <string name="_24hr_security">24hr Security</string>
    <string name="tv">TV</string>
    <string name="let_s_know_about_your_specifications">Let\'s Know about your Specifications</string>
    <string name="specialization">Specialization</string>
    <string name="electrician">Electrician</string>
    <string name="engine">Engine</string>
    <string name="suspension">Suspension</string>
    <string name="denter">Denter &amp; Painter</string>
    <string name="brand">Brand</string>
    <string name="mechanic_registration">Mechanic Registration</string>
    <string name="please_select_the_plan_please">Please Select your \n MemberShip plan</string>
    <string name="gold_membership">Gold Membership</string>
    <string name="have_a_great_time_with_roadpilot">Have a Great Time with RoadPilot</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="singup_here">SignUp Here..</string>
    <string name="search">Search</string>
    <string name="insurance_n_discount_on_food_at_dhaba_n_get_24_7_costumercare_support">Get the access to apply job + \nInsurance + \n Discount on Food at Dhaba + \n Get 24/7 CostumerCare Support</string>
    <string name="silver_membership">Silver MemberShip</string>
    <string name="get_the_access_to_apply_job_n_get_24_7_costumercare_support">Get the access to apply job + \n Get 24/7 CostumerCare Support</string>
    <string name="insurance_n_discount_on_food_at_dhaba_n_get_24_7_costumer_care">Insurance + \n Discount on Food at Dhaba + \n Get 24/7 Costumer Care</string>
    <string name="description_of_driver">Description of Driver</string>
    <string name="driver_should_be_from_particular_location_non_alcoholic_etc">Driver should be from particular location, non alcoholic etc.....</string>
    <string name="description_of_vehicles">Description of Vehicles</string>
    <string name="ap_04_1234_andhra_to_chennai">AP 04 1234 - Andhra to Chennai ......</string>
    <string name="number_of_drivers_you_need">Number Of Drivers You need ?</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_your_info">Update Your info</string>
    <string name="owner_information">Owner Information</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="driver_information">Driver Information</string>
    <string name="owners">Owner</string>
    <string name="drivers">Driver</string>
    <string name="dhabas">Dhaba</string>
    <string name="mechanics">Mechanic</string>
    <string name="shop">Shop</string>
    <string name="why_do_you_wanna_delete_account">Why do you want to delete Account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dandp">Dent &amp; Painting</string>
    <string name="electric">Electric</string>
    <string name="no_of_drivers_need">No of Drivers Need</string>
    <string name="languages">Languages</string>
    <string name="change_your_language_here_to_understand_the_app_better">Change your Language Here to understand the app better</string>
    <string name="english">English</string>
    <string name="choose" translatable="false">Choose</string>
    <string name="create_job_vacancy">Create Job Vacancy</string>
    <string name="type_of_truck">Type of Truck</string>
    <string name="no_of_wheels">No of wheels</string>
    <string name="route_of_vehicles">Route of Vehicles</string>
    <string name="nature_of_job">Nature Of Job</string>
    <string name="monthly">Monthly</string>
    <string name="character_certificate">Character Certificate</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="driving_licence_front">Driving Licence Front</string>
    <string name="driving_licence_back">Driving Licence Back</string>
    <string name="aadhar_back_side">Aadhar Back Side</string>
    <string name="aadhar_front_side">Aadhar Front Side</string>
    <string name="verification_code_otp">Verification Code OTP</string>
    <string name="verify">Verify</string>
    <string name="km_range">Km Range</string>
    <string name="range_to_search">Range to search</string>
    <string name="no_data_available_at_your_location">No Data Available! At Your Location!</string>
    <string name="support">Support</string>
    <string name="firm_proof">FIRM Proof</string>
    <string name="help">Help</string>
    <string name="in_case_of_any_trouble_in_using_app">In case of any trouble in using app...</string>
    <string name="reference_code">Reference code</string>
    <string name="do_you_in_job">Are you in job?</string>

</resources>