<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/castoro"
        android:text="Sorry for the inconvenience Please Login Here"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        android:hint="@string/email_id"
        android:textColor="@color/black"
        android:fontFamily="@font/castoro"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:fontFamily="@font/castoro"/>

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/appcolor"
        android:textAlignment="center"
        android:text="@string/singup_here"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:padding="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_home"/>



</LinearLayout>