<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/yellow"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registers.MechActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4"
            android:background="@color/black" />

        <TextView
            android:id="@+id/t29"
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/comfortaa_light"
            android:gravity="center"
            android:text="@string/let_s_know_about_your_specifications"
            android:textAlignment="center"
            android:textColor="#689F38"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4"
            android:background="@color/black" />

    </LinearLayout>


    <TextView
        android:id="@+id/t40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specialization"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/electric"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/electrician"
            android:textColor="@color/appcolor"
            android:background="@drawable/selected_fav"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:fontFamily="@font/comfortaa_regular"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/engine"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:fontFamily="@font/comfortaa_regular"
            android:layout_weight="1"
            android:text="@string/engine"
            android:textColor="@color/appcolor"
            android:background="@drawable/selected_fav"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:button="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/suspensio"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/suspension"
            android:textColor="@color/appcolor"
            android:background="@drawable/selected_fav"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:fontFamily="@font/comfortaa_regular"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/dandp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:fontFamily="@font/comfortaa_regular"
            android:layout_weight="1"
            android:text="@string/denter"
            android:textColor="@color/appcolor"
            android:background="@drawable/selected_fav"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:button="@android:color/transparent" />

    </LinearLayout>

    <TextView
        android:id="@+id/t41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="10dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_home">

            <EditText
                android:id="@+id/brand"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="brand"
                android:hint="@string/brand"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_home">

            <TextView
                android:id="@+id/submit"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/complete_registration"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>